--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 		}
 
 		#content {
-			min-height: 80%;
+			min-height: 78%;
 			text-align: center;
 		}
 
@@ -36,11 +36,11 @@
 		}
 
 		a:active {
-			text-decoration: blink;
+			text-decoration: none;
 		}
 
 		a:hover {
-			text-decoration: underline;
+			text-decoration: none;
 			color: #316448;
 		}
 
@@ -184,10 +184,16 @@
 	<footer>
 		<hr style="height:2px;border:none;border-top:2px dashed #419b4d;" />
 		<br>
-		<center>
+		<center style="font-size: 14px;">
 			<span style="color:#316448">Copyright © 2020 <a href="https://github.com/Buzz2d0">Buzz2d0</a> All
 				Rights
 				Reserved.</span>
+		</center>
+		<center>
+			<span id="icp"><img src="icp.png" style="vertical-align: text-bottom;">
+				<a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow"
+					style="color:black;font-size: 12px;text-decoration:none;">苏ICP备2020051327号</a>
+			</span>
 		</center>
 	</footer>
 </body>
