deploy: docs & frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,236 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Hyuga Platform🌀</title>
-	<meta name="keywords" content="hyuga, dnslog, ceye, dnslog平台" />
-	<meta name="description"
-		content="Hyuga is a monitoring tool used to detect out of band traffic (DNS queries and HTTP requests). 🌀" />
-	<link rel="shortcut icon" href="favicon.ico">
-	<style>
-		html,
-		body {
-			margin: 0px;
-			padding: 0px;
-			height: 100%;
-		}
-
-		#header {
-			text-align: center;
-			margin-top: 10px;
-		}
-
-		#header hr {
-			margin-top: 15px;
-		}
-
-		#content {
-			min-height: 78%;
-			text-align: center;
-		}
-
-		a:link {
-			text-decoration: none;
-			color: #316448;
-		}
-
-		a:active {
-			text-decoration: none;
-		}
-
-		a:hover {
-			text-decoration: none;
-			color: #316448;
-		}
-
-		a:visited {
-			text-decoration: none;
-			color: #316448;
-		}
-	</style>
-	<script>
-		var recordOptions = {
-			"dns": [[50, "DNS Query Record"], [25, "Remote Address"], [25, "Created Time"]],
-			"http": [[35, "HTTP Request Record"], [10, "Method"], [15, "Remote Address"], [20, "Cookies"], [20, "Created Time"]]
-		}
-		function ishost() {
-			host = window.location.hostname.split(".")
-			if (host.length == 4) {
-				for (let i = 0; i < host.length; i++) {
-					if (isNaN(host[i])) {
-						return true
-					}
-				}
-				return false
-			}
-			return true
-		}
-		function renderUserInfo() {
-			if (userDomain != "" && userToken != "") {
-				document.getElementById("myDomain").innerHTML = `Domain: ${userDomain} <br> Token: ${userToken}`;
-			}
-		}
-		function formatTimeStamp(ts) {
-			// ts is Unixtime(Nano)
-			ts = new Date(parseInt(ts) / 1000000);
-			return `${ts.toLocaleDateString()} ${ts.toLocaleTimeString("en-US")}`;
-		}
-		function renderRecodsOptions(data) {
-			// render result table
-			let rtype = document.getElementById("recordsType").value;
-			let recordsTable = ``;
-			for (let option of recordOptions[rtype]) {
-				recordsTable += `<th width="${option[0]}%">${option[1]}</th>`;
-			}
-			document.getElementById("RecordsHeader").innerHTML = recordsTable;
-			document.getElementById("RecordsNoData").innerHTML = "";
-			document.getElementById("RecordsList").innerHTML = "";
-			// 无数据时
-			if (data == undefined || data.length == 0) {
-				document.getElementById("RecordsNoData").innerHTML = `<td colspan="${recordOptions[rtype].length}" align="center">No Data</td>`;
-				return
-			}
-			// 有数据时
-			let records = "";
-			for (let rdata of data) {
-				let ts = formatTimeStamp(rdata.ts);
-				if (rtype == "dns") {
-					records += `<tr><td>${rdata.name}</td><td>${rdata.remoteAddr}</td><td>${ts}</td></tr>`;
-				} else {
-					records += `<tr><td>${rdata.url}</td><td>${rdata.method}</td><td>${rdata.remoteAddr}</td><td>${rdata.cookies}</td><td>${ts}</td></tr>`;
-				}
-			}
-			document.getElementById("RecordsList").innerHTML = records;
-		}
-		function setCookie(cname, cvalue) {
-			// expires for ever
-			let d = new Date("9999", "11", "31", 23, 59, 59)
-			document.cookie = cname + "=" + cvalue + "; " + "expires=" + d.toGMTString();
-		}
-		function getCookie(cname) {
-			let name = cname + "=";
-			let ca = document.cookie.split(';');
-			for (var i = 0; i < ca.length; i++) {
-				var c = ca[i].trim();
-				if (c.indexOf(name) == 0) { return c.substring(name.length, c.length); }
-			}
-			return "";
-		}
-		function GetDomain() {
-			xmlhttp.onreadystatechange = function () {
-				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-					let resp = JSON.parse(xmlhttp.responseText);
-					if (resp.success == true) {
-						userDomain = resp.data.identity;
-						userToken = resp.data.token;
-						setCookie("identity", userDomain);
-						setCookie("token", userToken);
-						renderUserInfo();
-					} else {
-						document.getElementById("myDomain").innerHTML = "域名获取失败！";
-					}
-				}
-			}
-			xmlhttp.open("POST", `${apiHost}/v1/users`, true);
-			xmlhttp.send();
-		}
-
-		function GetRecords() {
-			xmlhttp.onreadystatechange = function () {
-				if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-					let resp = JSON.parse(xmlhttp.responseText);
-					renderRecodsOptions(resp.data);
-				}
-			}
-			renderRecodsOptions();
-			// get some query field
-			let rtype = document.getElementById("recordsType").value;
-			let filter = document.getElementById("recordsFilter").value;
-			if (userToken != "") {
-				xmlhttp.open("GET", `${apiHost}/v1/records?type=${rtype}&token=${userToken}&filter=${filter}`, true);
-				xmlhttp.send();
-			}
-		}
-	</script>
-</head>
-
-<body>
-	<div id=header>
-		<a href="index.html"><img src="hyuga.png" height="50"></a>
-		<hr style="height:2px;border:none;border-top:2px dashed #419b4d;" />
-		<br>
-	</div>
-	<div id="content">
-		<button type="button" onclick="GetDomain()">Get SubDomain</button>
-		<br>
-		<br>
-		<div id="myDomain">&nbsp;</div>
-		<br>
-		<br>
-		<br>
-		<select id="recordsType">
-			<option value="dns" default>DNS</option>
-			<option value="http">HTTP</option>
-		</select>
-		<input id="recordsFilter" type="text" placeholder="输入过滤字符"></input>
-		<button type="button" onclick="GetRecords()">Refresh Record</button>
-		<br>
-		<br>
-		<center>
-			<table id="Records" width=1000 border="0" cellpadding="5" cellspacing="1" bgcolor="#EFF3FF"
-				style="word-break:break-all; word-wrap:break-all;">
-				<tbody id="RecordsDefault">
-					<tr id="RecordsHeader" bgcolor="#ADD3EF">
-						<!--  RecordsHeader-->
-					</tr>
-					<tr id="RecordsNoData" style="font-size:15px">
-						<!-- <td colspan="${}" align="center">No Data</td> -->
-					</tr>
-				</tbody>
-				<tbody id="RecordsList">
-				</tbody>
-			</table>
-		</center>
-	</div>
-	<footer>
-		<hr style="height:2px;border:none;border-top:2px dashed #419b4d;" />
-		<br>
-		<center style="font-size: 14px;">
-			<span style="color:#316448">Copyright © 2020 <a href="https://github.com/Buzz2d0">Buzz2d0</a> All
-				Rights
-				Reserved.</span>
-		</center>
-		<center>
-			<span id="icp"><img src="icp.png" style="vertical-align: text-bottom;">
-				<a href="http://beian.miit.gov.cn" target="_blank" rel="nofollow"
-					style="color:black;font-size: 12px;text-decoration:none;">苏ICP备2020051327号</a>
-			</span>
-		</center>
-	</footer>
-</body>
-<script>
-	// init
-	var xmlhttp;
-	var apiHost
-	if (ishost()) {
-		apiHost = `${window.location.protocol}//api.${window.location.host}`;
-	} else {
-		apiHost = `${window.location.protocol}//${window.location.host}`;
-	}
-	console.log(apiHost);
-
-	if (window.XMLHttpRequest) {
-		xmlhttp = new XMLHttpRequest();
-	}
-	else {
-		xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-	}
-	// domain && token 默认从 cookies 获取
-	var userDomain = getCookie("identity");
-	var userToken = getCookie("token");
-	renderUserInfo();
-	renderRecodsOptions();
-</script>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>Hyuga</title><meta name="keywords" content="hyuga, dnslog, ceye, dnslog平台"><meta name="description" content="Hyuga is a monitoring tool used to detect out of band traffic (DNS queries and HTTP requests). 🌀"><link href="/css/chunk-6275b9f6.ba9e113b.css" rel="prefetch"><link href="/css/chunk-759e7532.b8a998ee.css" rel="prefetch"><link href="/js/chunk-6275b9f6.07b8a108.js" rel="prefetch"><link href="/js/chunk-759e7532.a3fe4f78.js" rel="prefetch"><link href="/css/app.77f8591b.css" rel="preload" as="style"><link href="/css/chunk-vendors.bf7c7694.css" rel="preload" as="style"><link href="/js/app.9ae3b21b.js" rel="preload" as="script"><link href="/js/chunk-vendors.a8544391.js" rel="preload" as="script"><link href="/css/chunk-vendors.bf7c7694.css" rel="stylesheet"><link href="/css/app.77f8591b.css" rel="stylesheet"></head><body><div id="app"></div><script src="/js/chunk-vendors.a8544391.js"></script><script src="/js/app.9ae3b21b.js"></script></body></html>
